az na manual HOTOVO

--- a/man/manual.html
+++ b/man/manual.html
@@ -9,6 +9,6 @@
 
 
 	<body>
-	ahoj
+	Tady ještě časem dodělám manuál. Začnu v momentě, kdy příliš žluťoučký kůň přestane úpět ďábelské ódy.
 	</body>
 </html>
