--- a/man/manual.html
+++ b/man/manual.html
@@ -2,6 +2,14 @@
 <html>
 	<head>
 		<meta charset="utf8">
+		<style>
+			body {font-family: Arial; font-size: 14pt; padding-left: 30px}
+			h1 {font-size: 40pt; font-weight: bold}
+			h2 {font-size: 30pt; font-weight: bold}
+			h3 {font-size: 20pt; font-weight: bold}
+			#menu {font-size: 16pt; position: fixed; left: 30px; top: 80px; border: 2px solid black; padding: 10px}
+			#ch1 {position: absolute; left: 30px; top: 300px;}
+		</style>
 	</head>
 	
 
@@ -9,6 +17,17 @@
 
 
 	<body>
-	Tady ještě časem dodělám manuál. Začnu v momentě, kdy příliš žluťoučký kůň přestane úpět ďábelské ódy.
+		<h1>SuSol - Manuál</h1>
+		<div id="menu">
+			<h3>Obsah</h3>
+			<a href="#">Úvodní obrazovka</a><br>
+			<a href="#">Zadávání sudoku</a><br>
+			<a href="#">Řešení na čas</a><br>
+			<a href="#">Trénink</a>
+		</div>
+		<div id="ch1">
+			<h2>Úvodní obrazovka</h2>
+			asdfasdf
+		</div>
 	</body>
 </html>
