--- a/man/manual.html
+++ b/man/manual.html
@@ -43,9 +43,9 @@
 				</ul>
 				<ul>
 					<li>Přejít, Domů - přejít na domovskou obrazovku</li>
-					<li>Přejít, Zadávání sudoku - přejde do režimu <a href="#">Zadávání sudoku</a></li>
-					<li>Přejít, Řešení na čas - přejde do režimu <a href="#">Řešení na čas</a></li>
-					<li>Přejít, Trénink - přejde do režimu <a href="#">Trénink</a></li>
+					<li>Přejít, Zadávání sudoku - přejde do režimu <a href="#ch2">Zadávání sudoku</a></li>
+					<li>Přejít, Řešení na čas - přejde do režimu <a href="#ch3">Řešení na čas</a></li>
+					<li>Přejít, Trénink - přejde do režimu <a href="#ch4">Trénink</a></li>
 				</ul>
 				<ul>
 					<li>Nápověda, Uživatelský manuál - otevře tento manuál</li>
@@ -66,7 +66,7 @@
 				<h3>Ovládací panel</h3>
 				<ul>
 					<li>Číslo - číslo, které je v aktuálním políčku zadáno</li>
-					<li>Hotovo - otevře dialog pro uložení a následně přepne do režimu <a href="#">Trénink</a></li>
+					<li>Hotovo - otevře dialog pro uložení a následně přepne do režimu <a href="#ch4">Trénink</a></li>
 					<li>Smazat všechna čísla - vymaže všechna doposud napsaná čísla ze sudoku</li>
 					<li>Jiné metody zadávání - otevře dialog umožňující načtení již dříve vytvořeného sudoku, případě automatické vygenerování (toto trvá okolo 4 sekund)</li>
 				</ul>
@@ -87,7 +87,7 @@
 				<ul>
 					<li>Zabarvit dle kandidátů - podle toho, jaké kandidáty pro to které políčko uživatel vybral, tak se k nim automaticky doplní barvy</li>
 					<li>Odstranit barvu - otevře dialog, který umožňuje hromadně odstraňovat barvy: buď všechny z konkrétního políčka, nebo jednu vybranou z celého sudoku</li>
-					<li>Vzdát se - dosažený čas se nezapíše a uživatel dostane možnost vyluštit sudoku v režimu <a href="#">Trénink</a></li>
+					<li>Vzdát se - dosažený čas se nezapíše a uživatel dostane možnost vyluštit sudoku v režimu <a href="#ch4">Trénink</a></li>
 				</ul>
 			</a>
 			<a name="ch4">
